Fixed Imae Overflow and Rename Image to Images

--- a/frontend/src/styles/_profile.scss
+++ b/frontend/src/styles/_profile.scss
@@ -11,9 +11,11 @@
 
     background-image: url("https://scontent-bom1-1.cdninstagram.com/vp/633748d19c49931c166948e7c6b05f65/5BFD73F1/t51.2885-19/s150x150/30086307_190554238405069_2778711456735035392_n.jpg");
     margin: auto;
-    height: 200px;
-    width: 200px;
-    background-size: cover;
+    margin: 5%;
+    width: 90%;
+    padding-top: 90%;
+
+    background-size: contain;
     background-position: center;
     border: none;
     border-radius: 50%;
